feat: add style for global scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,22 @@
 body {
   background-color: var(--color-charcoal);
 }
+
+select {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  padding-right: 20px;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+::-webkit-scrollbar-button {
+  display: none;
+}
+
+body {
+  -ms-overflow-style: none;
+}
